fix overflow

--- a/frontend/public/scss/featured-product-cards.scss
+++ b/frontend/public/scss/featured-product-cards.scss
@@ -230,7 +230,7 @@
       padding-bottom: 66px;
       display: flex;
       margin-top: 17px;
-      width: 1344px;
+      width: 100%;
       @include media-breakpoint-down(sm) {
         width: 100%;
         margin-top: 30px;
